<resources>
    <string name="app_name">lab3</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="textview5">TextView</string>
    <string name="button_cl">Отправить</string>
    <string name="textview1_cl">Привет</string>
    <string name="textview2_cl">Привет</string>
    <string name="textview3_cl">Привет</string>
    <string name="textview4_cl">Привет</string>
    <string name="textview5_cl">АЗАЗААЗ</string>
    <string name="textview6_cl">Привет</string>
    <string name="message">Введите сообщение</string>
    <string name="ImgBut">Картинки</string>
    <string name="ConBut">Другой Чат</string>
</resources>